[gd_scene load_steps=7 format=2]

[ext_resource path="res://Inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Inventory/K-121.jpg" type="Texture" id=2]
[ext_resource path="res://Items/Active/Tack/tack_item1.png" type="Texture" id=3]
[ext_resource path="res://Items/Active/Gum/gum_item1.png" type="Texture" id=4]
[ext_resource path="res://Items/Passive/glue.png" type="Texture" id=5]
[ext_resource path="res://Items/Passive/eraser.png" type="Texture" id=6]

[node name="Inventory" type="Node2D"]
z_index = 15
script = ExtResource( 1 )

[node name="inventory_kan" type="Sprite" parent="."]
position = Vector2( -230.321, 76.6508 )
scale = Vector2( 0.394525, 0.483202 )
texture = ExtResource( 2 )

[node name="item1_tack" type="Sprite" parent="."]
visible = false
position = Vector2( -308, 54 )
z_index = 10
texture = ExtResource( 3 )

[node name="item2_gum" type="Sprite" parent="."]
visible = false
position = Vector2( -268, 54 )
scale = Vector2( 1.2851, 1.10461 )
z_index = 10
texture = ExtResource( 4 )

[node name="item3_glue" type="Sprite" parent="."]
visible = false
position = Vector2( -228, 54 )
z_index = 10
texture = ExtResource( 5 )

[node name="item4_eraser" type="Sprite" parent="."]
visible = false
position = Vector2( -193, 54 )
z_index = 10
texture = ExtResource( 6 )
